<resources>
    <string name="app_name">Github User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repositories">Repositories</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="github_photo">Github photo</string>
</resources>